completed the quotation session

--- a/index.html
+++ b/index.html
@@ -409,12 +409,12 @@
             <div class="container">
                 <div class="quotes">
                     <div class="infos">
-                        <div>
+                        <div class="me-5">
                             <img src="./assets/img/icon/phoneicon.png" class="phoneicons" alt="phoneicon" />
                         </div>
                         <div class="text-white">
                             <h2 class="fw-bold text-uppercase">Request A Free Quote</h2>
-                            <p class="lead"></p>
+                            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sint laboriosam nemo, veniam repudiandae dolorum?</p>
                         </div>
                     </div>
                     <div>
