completed furniture session

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
     <body>
         <!-- Start Back to Top -->
-
         <div></div>
-
         <!-- End Back to Top -->
 
         <!-- Start Header Session -->
@@ -426,7 +424,56 @@
         <!-- End Quotation Session -->
 
         <!-- Start Furniture Session -->
-        <section></section>
+        <section class="bg-light text-center py-3">
+            <div class="container">
+                <!-- start title -->
+                <div class="text-center mb-3">
+                    <div class="col">
+                        <h3 class="titles">Funiture Services</h3>
+                        <p class="text-light lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, necessitatibus!</p>
+                    </div>
+                </div>
+                <!-- end title -->
+
+                <div class="row furicons">
+                    <div class="col-md-4">
+                        <img src="./assets/img/icon/services1.png" alt="services1" />
+                        <h4>Fast Service</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus inventore qui asperiores corrupti, adipisci iste!</p>
+                    </div>
+
+                    <div class="col-md-4">
+                        <img src="./assets/img/icon/services2.png" alt="services2" />
+                        <h4>Fast Service</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus inventore qui asperiores corrupti, adipisci iste!</p>
+                    </div>
+
+                    <div class="col-md-4">
+                        <img src="./assets/img/icon/services3.png" alt="services3" />
+                        <h4>Fast Service</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus inventore qui asperiores corrupti, adipisci iste!</p>
+                    </div>
+
+                    <div class="col-md-4">
+                        <img src="./assets/img/icon/services4.png" alt="services4" />
+                        <h4>Fast Service</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus inventore qui asperiores corrupti, adipisci iste!</p>
+                    </div>
+
+                    <div class="col-md-4">
+                        <img src="./assets/img/icon/services5.png" alt="services5" />
+                        <h4>Fast Service</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus inventore qui asperiores corrupti, adipisci iste!</p>
+                    </div>
+
+                    <div class="col-md-4">
+                        <img src="./assets/img/icon/services6.png" alt="services6" />
+                        <h4>Fast Service</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus inventore qui asperiores corrupti, adipisci iste!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- End Furniture Session -->
 
         <!-- Start Contact Session -->
