--- a/index.html
+++ b/index.html
@@ -477,7 +477,36 @@
         <!-- End Furniture Session -->
 
         <!-- Start Contact Session -->
-        <section></section>
+        <section class="p-5 contacts">
+            <div class="container-fluid">
+                <div class="col-md-5">
+                    <h5 class="display-4 mb-3">Get New Letter</h5>
+
+                    <form action="" method="">
+                        <div class="form-group py-4">
+                            <input type="text" name="name" id="name" class="form-control p-3 inputs" placeholder="Enter Your Name " autocomplete="off" />
+                            <label for="name" class="labels">Name</label>
+                        </div>
+
+                        <div class="form-group py-4">
+                            <input type="email" name="email" id="email" class="form-control p-3 inputs" placeholder="Enter Your Email " autocomplete="off" />
+                            <label for="email" class="labels">Email</label>
+                        </div>
+
+                        <div class="my-5">
+                            <div class="form-check form-switch">
+                                <input type="checkbox" name="accept" id="accept" class="form-check-input" />
+                                <label for="accept" class="text-light"> I agree to get push notify. </label>
+                            </div>
+                        </div>
+
+                        <div class="d-grid">
+                            <button type="submit" class="btn text-uppercase fw-bold rounded-0 submit-btns">Subscribe</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
         <!-- End Contact Session -->
 
         <!-- Start Footer Session -->
