completed footer session

--- a/index.html
+++ b/index.html
@@ -510,7 +510,62 @@
         <!-- End Contact Session -->
 
         <!-- Start Footer Session -->
-        <footer></footer>
+        <footer class="bg-dark px-5">
+            <div class="container-fluid">
+                <div class="row text-light py-4">
+                    <div class="col-md-3 col-sm-6">
+                        <h5 class="mb-3"><img src="./assets/img/fav/favicon.png" width="70" alt="footericon" />About Plannco</h5>
+                        <p class="small">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel est ipsa animi fugit rerum laboriosam.</p>
+                    </div>
+
+                    <div class="col-md-3 col-sm-6">
+                        <h5 class="mb-3">Visit Us</h5>
+                        <ul class="list-unstyled">
+                            <li class=""><a href="javascript:void(0);">Home</a></li>
+                            <li class=""><a href="javascript:void(0);">About</a></li>
+                            <li class=""><a href="javascript:void(0);">Properties</a></li>
+                            <li class=""><a href="javascript:void(0);">Services</a></li>
+                            <li class=""><a href="javascript:void(0);">Customers</a></li>
+                            <li class=""><a href="javascript:void(0);">Furniture</a></li>
+                            <li class=""><a href="javascript:void(0);">Contacts</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-3 col-sm-6">
+                        <h5 class="mb-3">Need Help?</h5>
+                        <ul class="list-unstyled">
+                            <li class=""><a href="javascript:void(0);">Customer Service</a></li>
+                            <li class=""><a href="javascript:void(0);">Online Chat</a></li>
+                            <li class=""><a href="javascript:void(0);">Support</a></li>
+                            <li class=""><a href="javascript:void(0);">info@plannco.com</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-3 col-sm-6">
+                        <h5 class="mb-3">Contact Us Help?</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="javascript:void(0);" class="nav-link">Rm.602, Building(B), New University Avenue Rd, Bahan, Yangon</a></li>
+                            <li><a href="javascript:void(0);" class="nav-link">Phone: +95 9 4220 4335 / +95 9 4220 42242</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="text-light d-flex justify-content-between border-top pt-4">
+                        <p>&copy; <span id="getyear">2000</span> Copyright. Inc, All rights reserved.</p>
+                        <ul class="list-unstyled d-flex">
+                            <li>
+                                <a href="javascript:void(0);" class="nav-link"><i class="fab fa-facebook"></i></a>
+                            </li>
+                            <li class="mx-3">
+                                <a href="javascript:void(0);" class="nav-link"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);" class="nav-link"><i class="fab fa-instagram"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
         <!-- End Footer Session -->
 
         <!-- bootstrap css1 js1 -->
