added footer styles

--- a/index.html
+++ b/index.html
@@ -456,19 +456,19 @@
 
                     <div class="col-md-4">
                         <img src="./assets/img/icon/services4.png" alt="services4" />
-                        <h4>Fast Service</h4>
+                        <h4>Affordable Services</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus inventore qui asperiores corrupti, adipisci iste!</p>
                     </div>
 
                     <div class="col-md-4">
                         <img src="./assets/img/icon/services5.png" alt="services5" />
-                        <h4>Fast Service</h4>
+                        <h4>90days Warranty</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus inventore qui asperiores corrupti, adipisci iste!</p>
                     </div>
 
                     <div class="col-md-4">
                         <img src="./assets/img/icon/services6.png" alt="services6" />
-                        <h4>Fast Service</h4>
+                        <h4>Award Winning</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus inventore qui asperiores corrupti, adipisci iste!</p>
                     </div>
                 </div>
@@ -480,7 +480,7 @@
         <section class="p-5 contacts">
             <div class="container-fluid">
                 <div class="col-md-5">
-                    <h5 class="display-4 mb-3">Get New Letter</h5>
+                    <h5 class="display-4 mb-3 text-light">Get New Letter</h5>
 
                     <form action="" method="">
                         <div class="form-group py-4">
@@ -521,13 +521,13 @@
                     <div class="col-md-3 col-sm-6">
                         <h5 class="mb-3">Visit Us</h5>
                         <ul class="list-unstyled">
-                            <li class=""><a href="javascript:void(0);">Home</a></li>
-                            <li class=""><a href="javascript:void(0);">About</a></li>
-                            <li class=""><a href="javascript:void(0);">Properties</a></li>
-                            <li class=""><a href="javascript:void(0);">Services</a></li>
-                            <li class=""><a href="javascript:void(0);">Customers</a></li>
-                            <li class=""><a href="javascript:void(0);">Furniture</a></li>
-                            <li class=""><a href="javascript:void(0);">Contacts</a></li>
+                            <li><a href="javascript:void(0);" class="footerlinks">Home</a></li>
+                            <li><a href="javascript:void(0);" class="footerlinks">About</a></li>
+                            <li><a href="javascript:void(0);" class="footerlinks">Properties</a></li>
+                            <li><a href="javascript:void(0);" class="footerlinks">Services</a></li>
+                            <li><a href="javascript:void(0);" class="footerlinks">Customers</a></li>
+                            <li><a href="javascript:void(0);" class="footerlinks">Furniture</a></li>
+                            <li><a href="javascript:void(0);" class="footerlinks">Contacts</a></li>
                         </ul>
                     </div>
 
