completed back to top session

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 
     <body>
         <!-- Start Back to Top -->
-        <div></div>
+        <div class="fixed-bottom">
+            <a href="#header" class="btn-backtotops"><i class="fas fa-arrow-up"></i></a>
+        </div>
         <!-- End Back to Top -->
 
         <!-- Start Header Session -->
-        <header>
+        <header id="header">
             <!-- Start Nav Bar -->
             <nav class="navbar navbar-expand-lg fixed-top">
                 <a href="index.html" class="navbar-brand text-light mx-3">
@@ -444,13 +446,13 @@
 
                     <div class="col-md-4">
                         <img src="./assets/img/icon/services2.png" alt="services2" />
-                        <h4>Fast Service</h4>
+                        <h4>Secure Payments</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus inventore qui asperiores corrupti, adipisci iste!</p>
                     </div>
 
                     <div class="col-md-4">
                         <img src="./assets/img/icon/services3.png" alt="services3" />
-                        <h4>Fast Service</h4>
+                        <h4>Expert Team</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus inventore qui asperiores corrupti, adipisci iste!</p>
                     </div>
 
@@ -534,10 +536,10 @@
                     <div class="col-md-3 col-sm-6">
                         <h5 class="mb-3">Need Help?</h5>
                         <ul class="list-unstyled">
-                            <li class=""><a href="javascript:void(0);">Customer Service</a></li>
-                            <li class=""><a href="javascript:void(0);">Online Chat</a></li>
-                            <li class=""><a href="javascript:void(0);">Support</a></li>
-                            <li class=""><a href="javascript:void(0);">info@plannco.com</a></li>
+                            <li class=""><a href="javascript:void(0);" class="footerlinks">Customer Service</a></li>
+                            <li class=""><a href="javascript:void(0);" class="footerlinks">Online Chat</a></li>
+                            <li class=""><a href="javascript:void(0);" class="footerlinks">Support</a></li>
+                            <li class=""><a href="javascript:void(0);" class="footerlinks">info@plannco.com</a></li>
                         </ul>
                     </div>
 
