--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
         </div>
         <!-- End Back to Top -->
 
+        <!-- Start Sticky Note -->
+        <div class="sticknotes">
+            <a href="javascript:void(0);" class="about">About</a>
+            <a href="javascript:void(0);" class="blog">Blog</a>
+            <a href="javascript:void(0);" class="news">News</a>
+            <a href="javascript:void(0);" class="contact">Contact</a>
+        </div>
+        <!-- End Sticky Note -->
+
         <!-- Start Header Session -->
         <header id="header">
             <!-- Start Nav Bar -->
@@ -486,12 +495,12 @@
 
                     <form action="" method="">
                         <div class="form-group py-4">
-                            <input type="text" name="name" id="name" class="form-control p-3 inputs" placeholder="Enter Your Name " autocomplete="off" />
+                            <input type="text" name="name" id="name" class="form-control p-3 inputs" placeholder="Enter Your Name" autocomplete="off" />
                             <label for="name" class="labels">Name</label>
                         </div>
 
                         <div class="form-group py-4">
-                            <input type="email" name="email" id="email" class="form-control p-3 inputs" placeholder="Enter Your Email " autocomplete="off" />
+                            <input type="email" name="email" id="email" class="form-control p-3 inputs" placeholder="Enter Your Email" autocomplete="off" />
                             <label for="email" class="labels">Email</label>
                         </div>
 
